# Forgeflow

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Containerfile  README.md  compose.gcloud.yml  compose.yml  docker-compose.yml  podman-compose.yml
.cursor/: hooks.json  mcp.json
.cursor/hooks/: auto-commit.sh  auto-push.sh
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml  Containerfile  Dockerfile
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  shutdown.rs
backend/src/clients/: cursor.rs  github.rs  mod.rs  slack.rs  stitch.rs  stitch_token.rs
backend/src/domain/: types.rs
backend/src/services/: architecture_qa.rs  artifacts.rs  daily_log.rs  daily_log_notify.rs  github.rs  health.rs  ingest.rs  language.rs  mod.rs  orchestrator.rs  project_git.rs  project_watch.rs  worker.rs
backend/src/services/pipeline/: engine.rs  mod.rs  mq.rs
backend/src/services/queue/: messages.rs  mod.rs
backend/src/services/store/: memory.rs  mod.rs  notifying.rs  redis_store.rs
backend/src/web/: auth.rs  handlers.rs  mod.rs  routes.rs  ws.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/artifacts/: Cargo.toml
crates/artifacts/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cursor-client/: Cargo.toml
crates/cursor-client/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  types.rs
crates/stitch-client/: Cargo.toml
crates/stitch-client/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
docs/: ARCHITECTURE.md  PLANNING.md  PODMAN.md  PRODUCTION_READINESS.md  QUALITY_WORKFLOW.md  STITCH_ACCESS_TOKEN.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: ArchitectureQnAPanel.tsx  DailyLogPanel.tsx  Layout.tsx  ModelConfigPanel.tsx  PipelineActivityPanel.tsx  PipelineRestartPanel.tsx  PipelineStages.tsx  ProjectCard.tsx  RequireAuth.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useProject.ts  useProjects.ts
frontend/src/pages/: DashboardPage.tsx  ImageHostingPage.tsx  LoginPage.tsx  NewProjectPage.tsx  ProjectDetailPage.tsx
frontend/src/types/: index.ts
migrations/: 001_init.sql
nginx/: Dockerfile  nginx.conf
nvim/: README.md  lazy-setup.lua
nvim/lua/autoforge-mcu/: arduino.lua  detect.lua  init.lua  platformio.lua  runner.lua  stm32.lua
nvim/lua/autoforge-nvim/: config.lua  init.lua
nvim/lua/plugins/: arduino-nvim.lua  autoforge-mcu.lua  init.lua
nvim/plugin/: autoforge-mcu.lua
scripts/: compose-up.sh  e2e-playwright-mcp.mjs  functional-test.mjs  podman-up.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/clients/: github.rs  mod.rs
src/domain/: types.rs
src/services/: ingest.rs  mod.rs  orchestrator.rs  pipeline.rs  worker.rs
src/services/pipeline/: engine.rs  mq.rs
src/services/quality/: mod.rs  report.rs
src/services/queue/: messages.rs
src/web/: handlers.rs  mod.rs  routes.rs
static/: index.html
static/assets/: index-BfDV7LZj.css  index-Ct2cF2yo.js
