[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/cursor-client",
    "crates/stitch-client",
    "crates/ingest",
    "crates/artifacts",
    "crates/orchestrator",
    "crates/worker",
    "crates/api",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
clap = { version = "4", features = ["derive", "env"] }
lopdf = "0.34"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
