[package]
name = "autoforge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"
description = "AI 외주 자동화 오케스트레이터 — PDF 계획서 → Sonnet/Fable/Stitch/Codex 파이프라인"

[[bin]]
name = "autoforge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-multipart = "0.7"
actix-cors = "0.7"
subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
lopdf = "0.34"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
