[package]
name = "autoforge-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autoforge-shared = { path = "../shared" }
autoforge-orchestrator = { path = "../orchestrator" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-stream = "0.1"
