[package]
name = "autoforge-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autoforge-shared = { path = "../shared" }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
