[package]
name = "autoforge-cursor-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autoforge-shared = { path = "../shared" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
