[package]
name = "autoforge-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autoforge-shared = { path = "../shared" }
lopdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
