[package]
name = "autoforge-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
autoforge-shared = { path = "../shared" }
autoforge-cursor-client = { path = "../cursor-client" }
autoforge-stitch-client = { path = "../stitch-client" }
autoforge-ingest = { path = "../ingest" }
autoforge-artifacts = { path = "../artifacts" }
autoforge-orchestrator = { path = "../orchestrator" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
